azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "apiProfile": "2018-03-01-hybrid",
  "parameters": {
    "adminUsername": {
      "defaultValue": "rrasadmin",
      "type": "string",
      "metadata": {
        "description": "The name of the Administrator of the new VMs"
      }
    },
    "adminPassword": {
      "defaultValue": "[subscription().subscriptionId]",
      "type": "securestring",
      "metadata": {
        "description": "The password for the Administrator account of the new VMs. Default value is subscription id"
      }
    },
    "SharedSecret": {
      "defaultValue": "ilovestack!",
      "type": "string",
      "metadata": {
        "description": "The Shared Secret phrase for the tunnel"
      }
    },
    "VNet1Name": {
      "defaultValue":"VNet1",
      "type": "string",
      "metadata": {
        "description": "The name of VNet1.  THis will e used to label the resources"
      }
    },
    "VNet1AddressSpace": {
      "defaultValue":"10.1.0.0/16",
      "type": "string",
      "metadata": {
        "description": "Address Space for VNet1"
      }
    },
    "VNet1TunnelSubnetRange": {
      "defaultValue":"10.1.254.0/24",
      "type": "string",
      "metadata": {
        "description": "Address Range for VNet1 Tunnel Subnet"
      }
    },
    "VNet1TunnelGW": {
      "defaultValue":"10.1.254.4",
      "type": "string",
      "metadata": {
        "description": "Static Address for VNet1 RRAS Server. "
      }
    },
    "VNet1SubnetName": {
      "defaultValue":"Internal",
      "type": "string",
      "metadata": {
        "description": "Name for Internal Subnet"
      }
    },
    "VNet1InternalSubnetRange": {
      "defaultValue":"10.1.1.0/24",
      "type": "string",
      "metadata": {
        "description": "Address Range for VNet1 Internal Subnet"
      }      
    },
    "VNet1InternalGW": {
      "defaultValue":"10.1.1.4",
      "type": "string",
      "metadata": {
        "description": "Static Address for VNet1 RRAS Server.  Used for User defined route in Route table."
      }
    },
    "_artifactsLocation": {
      "defaultValue": "https://raw.githubusercontent.com/lucidqdreams/S2SVPNTunnel/master/",
      "type": "string",
      "metadata": {
        "description": "The location of resources, such as templates and DSC modules, that the template depends on"
      }
    },
    "_artifactsLocationSasToken": {
      "defaultValue": "",
      "type": "securestring",
      "metadata": {
        "description": "Auto-generated token to access _artifactsLocation"
      }
    }
  },

  "variables": {
    "WindowsImageSKU": "2016-Datacenter",
    "storageAccountType": "Standard_LRS",
    "storageName": "[concat('sa', uniquestring(resourceGroup().id))]",
    "VMSize": "Standard_DS2_v2",    
    "windowsImagePublisher": "MicrosoftWindowsServer",
    "windowsImageOffer": "WindowsServer",
    "windowsImageVersion": "latest",   
    "vmName": "-RRAS",
    "VNet1VMName": "[concat(variables('VNet1'),variables('vmName'))]",
  
    "VNet1": "[parameters('VNet1Name')]",
    "VNet1AddressSpace": "[parameters('VNet1AddressSpace')]",
    "VNet1TunnelSubnetRange": "[parameters('VNet1TunnelSubnetRange')]",
    "VNet1TunnelGW": "[parameters('VNet1TunnelGW')]",
    "VNet1InternalSubnetRange": "[parameters('VNet1InternalSubnetRange')]",
    "VNet1InternalGW": "[parameters('VNet1InternalGW')]",
    "TunnelSubnetName": "Tunnel",
    "VNet1InternalSubnetName": "[parameters('VNet1SubnetName')]",
    "NamingSuffix": "",        
            
    "VNet1Name": "[concat(variables('vnet1'),variables('NamingSuffix'),'-vnet' )]",
    "vnetID1": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNet1Name'))]",   
    "TunnelSubnetRefVNet1": "[concat(variables('vnetID1'),'/subnets/',variables('TunnelSubnetName'))]",
    "InternalSubnetRefVNet1": "[concat(variables('vnetID1'),'/subnets/',variables('VNet1InternalSubnetName'))]",
    "RouteTable1Name": "[concat('RoutesFor',variables('VNet1'),variables('NamingSuffix'),'-rt' )]",
    "TunnelnsgName": "[concat(variables('TunnelSubnetName'),variables('NamingSuffix'),'-nsg' )]",
    "TunnelnsgID": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('TunnelnsgName'))]",    
    "NICPrefixVNet1": "[concat(variables('VNet1'),variables('vmName'))]",
    "VNet1TunnelPIPName": "[concat(variables('VNet1'),'-',variables('TunnelSubnetName'),variables('NamingSuffix'),'-pip')]",    
    
    "InstallRRASDSC": "[concat(parameters('_artifactsLocation'), 'DSC/InstallRRAS.zip', parameters('_artifactsLocationSasToken'))]",
    "InstallRRAS": "InstallRRAS.ps1\\InstallRRAS",
    
  },

  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('TunnelnsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "500UDP",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "500",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "4500UDP",
            "properties": {
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "4500",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 130,
              "direction": "Inbound"
            }
          }
        ]
      }
    },

    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('RouteTable1Name')]",
      "location": "[resourceGroup().location]",
      "properties": {
      }
    },

    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "[variables('storageAccountType')]"
      },
      "kind": "Storage"    
    },

    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('VNet1Name')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('VNet1AddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('TunnelSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('VNet1TunnelSubnetRange')]",
              "networkSecurityGroup": {
                "id": "[variables('TunnelnsgID')]"
              }              
            }
          },
          {
            "name": "[variables('VNet1InternalSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('VNet1InternalSubnetRange')]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('RouteTable1Name'))]"
              }
              }
            }
        ]
      },
      "dependsOn": [
        "[variables('TunnelnsgID')]",
        "[concat('Microsoft.Network/routeTables/', variables('RouteTable1Name'))]"
      ]
    },
     
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('VNet1TunnelPIPName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Static"       
      },
      "dependsOn": [
        "[variables('vnetID1')]"
      ]
    },

    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet1'),'1-', variables('TunnelSubnetName'),'-nic')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,  
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('VNet1TunnelGW')]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNet1TunnelPIPName'))]"
              },
              "subnet": {
                "id": "[variables('TunnelSubnetRefVNet1')]"
              }          
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID1')]",
        "[resourceId('Microsoft.Network/publicIPAddresses',variables('VNet1TunnelPIPName'))]"
      ]
    },

    {
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('NICPrefixVNet1'),'1-', variables('VNet1InternalSubnetName'),'-nic')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "enableIPForwarding":true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('VNet1InternalGW')]",
              "subnet": {
                "id": "[variables('InternalSubnetRefVNet1')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('vnetID1')]"
      ]
    },

      {
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[concat(variables('VNet1VMName'), '1')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
            "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet1'), '1-', variables('TunnelSubnetName'),'-nic'))]",
            "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet1'), '1-', variables('VNet1InternalSubnetName'),'-nic'))]",
            "[resourceId('Microsoft.Storage/storageAccounts',concat(variables('storageName')))]"
          ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[variables('vmSize')]"
          },
          "osProfile": {
            "computerName": "[concat(variables('VNet1VMName'), '1')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "[variables('windowsImagePublisher')]",
              "offer": "[variables('windowsImageOffer')]",
              "sku": "[variables('windowsImageSKU')]",
              "version": "[variables('windowsImageVersion')]"
            },
            "osDisk": {
              "name": "[concat(variables('VNet1VMName'), '1-osdisk')]",
              "caching": "ReadWrite",
              "createOption": "FromImage"
            }
        },        
          "networkProfile": {
            "networkInterfaces": [
              {
                "properties": {
                  "primary": true
                },
                "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet1'),'1-', variables('TunnelSubnetName'),'-nic'))]"
              },
              {
                "properties": {
                  "primary": false
                },
                "id": "[resourceId('Microsoft.Network/networkInterfaces',concat(variables('NICPrefixVNet1'),'1-', variables('VNet1InternalSubnetName'),'-nic'))]"
              }
            ]
          }
        }       
      },

      {
        "type": "Microsoft.Compute/virtualMachines/extensions",
        "name": "[concat(concat(variables('VNet1VMName'), '1','/InstallRRAS'))]",
        "location": "[resourceGroup().location]",
        "tags": {
          "displayName": "InstallRRAS"
        },
        "properties": {
          "publisher": "Microsoft.Powershell",
          "type": "DSC",
          "typeHandlerVersion": "2.77",
          "autoUpgradeMinorVersion": true,
          "settings": {
            "modulesUrl": "[variables('InstallRRASDSC')]",
            "configurationFunction": "[variables('InstallRRAS')]"
          },
          "protectedSettings": {
            "Items": {
            }
          }
        },
        "dependsOn": [
          "[resourceId('Microsoft.Compute/virtualMachines',concat(concat(variables('VNet1VMName'), '1')))]"
        ]
      }
          
    ],

  "outputs": {
    "InternalSubnetRefVNet1":{
      "type": "string",
      "value":"[variables('InternalSubnetRefVNet1')]"
    },
    "AddressSpace": {
      "type": "string",
      "value": "[variables('VNet1AddressSpace')]"
    }
  }
}
